GH-10471: pass unLockChannelKey as `KEYS[2]` instead of `ARGV[2]` as values used as keys should be passed as such
Signed-off-by: Severin Kistler <kistlerseverin@gmail.com>